[gd_scene load_steps=19 format=3 uid="uid://cwr65be7sraem"]

[ext_resource type="Script" path="res://scripts/hud.gd" id="1_afl1v"]
[ext_resource type="Texture2D" uid="uid://ctx0riyljempg" path="res://textures/actionbar.png" id="1_p3smb"]
[ext_resource type="Texture2D" uid="uid://cfcvvscnq63vy" path="res://textures/actionbar_selected.png" id="3_xvcdo"]
[ext_resource type="Texture2D" uid="uid://ceh6kcvkydlps" path="res://textures/joao-francisco-tanini-figueiredo-steve-minecraft-player-3.png" id="6_0rp0o"]
[ext_resource type="Texture2D" uid="uid://b52nqyujlx5mb" path="res://textures/inventory.png" id="8_l6hej"]
[ext_resource type="Texture2D" uid="uid://coxhuuv4vur00" path="res://textures/chest_single.png" id="9_du2qu"]
[ext_resource type="AudioStream" uid="uid://bjkej00teylr8" path="res://sounds/chestopen.wav" id="10_u71ey"]
[ext_resource type="AudioStream" uid="uid://bsj5pvjpjhb3o" path="res://sounds/chestclosed.wav" id="11_ot7if"]
[ext_resource type="Texture2D" uid="uid://q6pwd5w2yqlp" path="res://textures/crafting_table.png" id="12_l5npx"]

[sub_resource type="AtlasTexture" id="AtlasTexture_kg5ns"]
atlas = ExtResource("6_0rp0o")
region = Rect2(1152, 435, 384, 435)

[sub_resource type="AtlasTexture" id="AtlasTexture_os0df"]
atlas = ExtResource("6_0rp0o")
region = Rect2(1536, 435, 384, 435)

[sub_resource type="AtlasTexture" id="AtlasTexture_671vt"]
atlas = ExtResource("6_0rp0o")
region = Rect2(0, 870, 384, 435)

[sub_resource type="AtlasTexture" id="AtlasTexture_6sc76"]
atlas = ExtResource("6_0rp0o")
region = Rect2(384, 870, 384, 435)

[sub_resource type="AtlasTexture" id="AtlasTexture_ea4ui"]
atlas = ExtResource("6_0rp0o")
region = Rect2(768, 870, 384, 435)

[sub_resource type="AtlasTexture" id="AtlasTexture_5beeo"]
atlas = ExtResource("6_0rp0o")
region = Rect2(1152, 870, 384, 435)

[sub_resource type="AtlasTexture" id="AtlasTexture_6apxc"]
atlas = ExtResource("6_0rp0o")
region = Rect2(1536, 870, 384, 435)

[sub_resource type="AtlasTexture" id="AtlasTexture_l8lkc"]
atlas = ExtResource("6_0rp0o")
region = Rect2(0, 1305, 384, 435)

[sub_resource type="SpriteFrames" id="SpriteFrames_q6ww4"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_kg5ns")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_os0df")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_671vt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6sc76")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ea4ui")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5beeo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6apxc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l8lkc")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[node name="hud" type="CanvasLayer"]
script = ExtResource("1_afl1v")

[node name="ActionBar" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Frame" type="CenterContainer" parent="ActionBar"]
layout_mode = 2
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = 286.0
offset_top = 541.0
offset_right = 466.0
offset_bottom = 562.0
grow_horizontal = 2
grow_vertical = 0
scale = Vector2(3, 3)

[node name="TextureRect" type="TextureRect" parent="ActionBar/Frame"]
layout_mode = 2
texture = ExtResource("1_p3smb")
stretch_mode = 2

[node name="Slot1" type="CenterContainer" parent="ActionBar"]
layout_mode = 2
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = 297.0
offset_top = 552.0
offset_right = 313.0
offset_bottom = 568.0
grow_horizontal = 2
grow_vertical = 0
scale = Vector2(2.5, 2.5)

[node name="SlotTexture" type="TextureRect" parent="ActionBar/Slot1"]
layout_mode = 2

[node name="SlotSelected" type="Sprite2D" parent="ActionBar/Slot1"]
visible = false
position = Vector2(7.99999, 7.59995)
scale = Vector2(1.2, 1.2)
texture = ExtResource("3_xvcdo")

[node name="Slot2" type="CenterContainer" parent="ActionBar"]
layout_mode = 2
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = 357.0
offset_top = 552.0
offset_right = 373.0
offset_bottom = 568.0
grow_horizontal = 2
grow_vertical = 0
scale = Vector2(2.5, 2.5)

[node name="SlotTexture" type="TextureRect" parent="ActionBar/Slot2"]
layout_mode = 2

[node name="SlotSelected" type="Sprite2D" parent="ActionBar/Slot2"]
visible = false
position = Vector2(7.59998, 7.99995)
scale = Vector2(1.2, 1.2)
texture = ExtResource("3_xvcdo")

[node name="Slot3" type="CenterContainer" parent="ActionBar"]
layout_mode = 2
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = 417.0
offset_top = 552.0
offset_right = 433.0
offset_bottom = 568.0
grow_horizontal = 2
grow_vertical = 0
scale = Vector2(2.5, 2.5)

[node name="SlotTexture" type="TextureRect" parent="ActionBar/Slot3"]
layout_mode = 2

[node name="SlotSelected" type="Sprite2D" parent="ActionBar/Slot3"]
visible = false
position = Vector2(7.59998, 7.99995)
scale = Vector2(1.2, 1.2)
texture = ExtResource("3_xvcdo")

[node name="Slot4" type="CenterContainer" parent="ActionBar"]
layout_mode = 2
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = 476.0
offset_top = 552.0
offset_right = 492.0
offset_bottom = 568.0
grow_horizontal = 2
grow_vertical = 0
scale = Vector2(2.5, 2.5)

[node name="SlotTexture" type="TextureRect" parent="ActionBar/Slot4"]
layout_mode = 2

[node name="SlotSelected" type="Sprite2D" parent="ActionBar/Slot4"]
visible = false
position = Vector2(7.59998, 7.99995)
scale = Vector2(1.2, 1.2)
texture = ExtResource("3_xvcdo")

[node name="Slot5" type="CenterContainer" parent="ActionBar"]
layout_mode = 2
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = 536.0
offset_top = 552.0
offset_right = 552.0
offset_bottom = 568.0
grow_horizontal = 2
grow_vertical = 0
scale = Vector2(2.5, 2.5)

[node name="SlotTexture" type="TextureRect" parent="ActionBar/Slot5"]
layout_mode = 2

[node name="SlotSelected" type="Sprite2D" parent="ActionBar/Slot5"]
visible = false
position = Vector2(7.59998, 7.99995)
scale = Vector2(1.2, 1.2)
texture = ExtResource("3_xvcdo")

[node name="Slot6" type="CenterContainer" parent="ActionBar"]
layout_mode = 2
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = 596.0
offset_top = 552.0
offset_right = 612.0
offset_bottom = 568.0
grow_horizontal = 2
grow_vertical = 0
scale = Vector2(2.5, 2.5)

[node name="SlotTexture" type="TextureRect" parent="ActionBar/Slot6"]
layout_mode = 2

[node name="SlotSelected" type="Sprite2D" parent="ActionBar/Slot6"]
visible = false
position = Vector2(7.59998, 7.99995)
scale = Vector2(1.2, 1.2)
texture = ExtResource("3_xvcdo")

[node name="Slot7" type="CenterContainer" parent="ActionBar"]
layout_mode = 2
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = 657.0
offset_top = 552.0
offset_right = 673.0
offset_bottom = 568.0
grow_horizontal = 2
grow_vertical = 0
scale = Vector2(2.5, 2.5)

[node name="SlotTexture" type="TextureRect" parent="ActionBar/Slot7"]
layout_mode = 2

[node name="SlotSelected" type="Sprite2D" parent="ActionBar/Slot7"]
visible = false
position = Vector2(7.59998, 7.99995)
scale = Vector2(1.2, 1.2)
texture = ExtResource("3_xvcdo")

[node name="Slot8" type="CenterContainer" parent="ActionBar"]
layout_mode = 2
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = 716.0
offset_top = 552.0
offset_right = 732.0
offset_bottom = 568.0
grow_horizontal = 2
grow_vertical = 0
scale = Vector2(2.5, 2.5)

[node name="SlotTexture" type="TextureRect" parent="ActionBar/Slot8"]
layout_mode = 2

[node name="SlotSelected" type="Sprite2D" parent="ActionBar/Slot8"]
visible = false
position = Vector2(7.59998, 7.99995)
scale = Vector2(1.2, 1.2)
texture = ExtResource("3_xvcdo")

[node name="Slot9" type="CenterContainer" parent="ActionBar"]
layout_mode = 2
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = 776.0
offset_top = 552.0
offset_right = 792.0
offset_bottom = 568.0
grow_horizontal = 2
grow_vertical = 0
scale = Vector2(2.5, 2.5)

[node name="SlotTexture" type="TextureRect" parent="ActionBar/Slot9"]
layout_mode = 2

[node name="SlotSelected" type="Sprite2D" parent="ActionBar/Slot9"]
visible = false
position = Vector2(7.59998, 7.99995)
scale = Vector2(1.2, 1.2)
texture = ExtResource("3_xvcdo")

[node name="CraftingTable" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 0
offset_left = 576.0
offset_top = 324.0
offset_right = 576.0
offset_bottom = 324.0

[node name="Frame" type="CenterContainer" parent="CraftingTable"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(3, 3)

[node name="Sprite2D" type="Sprite2D" parent="CraftingTable/Frame"]
texture = ExtResource("12_l5npx")

[node name="Inventory" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="Frame" type="CenterContainer" parent="Inventory"]
layout_mode = 0
offset_left = -244.0
offset_top = -229.0
offset_right = -68.0
offset_bottom = -63.0
scale = Vector2(3, 3)

[node name="TextureRect" type="TextureRect" parent="Inventory/Frame"]
layout_mode = 2
texture = ExtResource("8_l6hej")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="Inventory"]
position = Vector2(-97, -102)
scale = Vector2(0.2, 0.2)
sprite_frames = SubResource("SpriteFrames_q6ww4")
autoplay = "default"

[node name="SingleChest" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="ChestOpen" type="AudioStreamPlayer2D" parent="SingleChest"]
position = Vector2(576, 324)
stream = ExtResource("10_u71ey")

[node name="ChestClosed" type="AudioStreamPlayer2D" parent="SingleChest"]
position = Vector2(576, 324)
stream = ExtResource("11_ot7if")

[node name="Frame" type="CenterContainer" parent="SingleChest"]
layout_mode = 0
offset_left = 312.0
offset_top = 75.0
offset_right = 488.0
offset_bottom = 241.0
scale = Vector2(3, 3)

[node name="TextureRect" type="TextureRect" parent="SingleChest/Frame"]
layout_mode = 2
texture = ExtResource("9_du2qu")

[node name="Slots" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Slot1" type="CenterContainer" parent="Slots"]
layout_mode = 0
offset_left = 340.0
offset_top = 505.0
offset_right = 356.0
offset_bottom = 521.0
scale = Vector2(2.5, 2.5)

[node name="SlotTexture" type="TextureRect" parent="Slots/Slot1"]
layout_mode = 2

[node name="Slot2" type="CenterContainer" parent="Slots"]
layout_mode = 0
offset_left = 394.0
offset_top = 505.0
offset_right = 410.0
offset_bottom = 521.0
scale = Vector2(2.5, 2.5)

[node name="SlotTexture" type="TextureRect" parent="Slots/Slot2"]
layout_mode = 2

[node name="Slot3" type="CenterContainer" parent="Slots"]
layout_mode = 0
offset_left = 448.0
offset_top = 505.0
offset_right = 464.0
offset_bottom = 521.0
scale = Vector2(2.5, 2.5)

[node name="SlotTexture" type="TextureRect" parent="Slots/Slot3"]
layout_mode = 2

[node name="Slot4" type="CenterContainer" parent="Slots"]
layout_mode = 0
offset_left = 502.0
offset_top = 505.0
offset_right = 518.0
offset_bottom = 521.0
scale = Vector2(2.5, 2.5)

[node name="SlotTexture" type="TextureRect" parent="Slots/Slot4"]
layout_mode = 2

[node name="Slot5" type="CenterContainer" parent="Slots"]
layout_mode = 0
offset_left = 556.0
offset_top = 505.0
offset_right = 572.0
offset_bottom = 521.0
scale = Vector2(2.5, 2.5)

[node name="SlotTexture" type="TextureRect" parent="Slots/Slot5"]
layout_mode = 2

[node name="Slot6" type="CenterContainer" parent="Slots"]
layout_mode = 0
offset_left = 610.0
offset_top = 505.0
offset_right = 626.0
offset_bottom = 521.0
scale = Vector2(2.5, 2.5)

[node name="SlotTexture" type="TextureRect" parent="Slots/Slot6"]
layout_mode = 2

[node name="Slot7" type="CenterContainer" parent="Slots"]
layout_mode = 0
offset_left = 664.0
offset_top = 505.0
offset_right = 680.0
offset_bottom = 521.0
scale = Vector2(2.5, 2.5)

[node name="SlotTexture" type="TextureRect" parent="Slots/Slot7"]
layout_mode = 2

[node name="Slot8" type="CenterContainer" parent="Slots"]
layout_mode = 0
offset_left = 718.0
offset_top = 505.0
offset_right = 734.0
offset_bottom = 521.0
scale = Vector2(2.5, 2.5)

[node name="SlotTexture" type="TextureRect" parent="Slots/Slot8"]
layout_mode = 2

[node name="Slot9" type="CenterContainer" parent="Slots"]
layout_mode = 0
offset_left = 772.0
offset_top = 505.0
offset_right = 788.0
offset_bottom = 521.0
scale = Vector2(2.5, 2.5)

[node name="SlotTexture" type="TextureRect" parent="Slots/Slot9"]
layout_mode = 2

[node name="Slot10" type="CenterContainer" parent="Slots"]
layout_mode = 0
offset_left = 340.0
offset_top = 331.0
offset_right = 356.0
offset_bottom = 347.0
scale = Vector2(2.5, 2.5)

[node name="SlotTexture" type="TextureRect" parent="Slots/Slot10"]
layout_mode = 2

[node name="Slot11" type="CenterContainer" parent="Slots"]
layout_mode = 0
offset_left = 394.0
offset_top = 331.0
offset_right = 410.0
offset_bottom = 347.0
scale = Vector2(2.5, 2.5)

[node name="SlotTexture" type="TextureRect" parent="Slots/Slot11"]
layout_mode = 2

[node name="Slot12" type="CenterContainer" parent="Slots"]
layout_mode = 0
offset_left = 448.0
offset_top = 331.0
offset_right = 464.0
offset_bottom = 347.0
scale = Vector2(2.5, 2.5)

[node name="SlotTexture" type="TextureRect" parent="Slots/Slot12"]
layout_mode = 2

[node name="Slot13" type="CenterContainer" parent="Slots"]
layout_mode = 0
offset_left = 502.0
offset_top = 331.0
offset_right = 518.0
offset_bottom = 347.0
scale = Vector2(2.5, 2.5)

[node name="SlotTexture" type="TextureRect" parent="Slots/Slot13"]
layout_mode = 2

[node name="Slot14" type="CenterContainer" parent="Slots"]
layout_mode = 0
offset_left = 556.0
offset_top = 331.0
offset_right = 572.0
offset_bottom = 347.0
scale = Vector2(2.5, 2.5)

[node name="SlotTexture" type="TextureRect" parent="Slots/Slot14"]
layout_mode = 2

[node name="Slot15" type="CenterContainer" parent="Slots"]
layout_mode = 0
offset_left = 610.0
offset_top = 331.0
offset_right = 626.0
offset_bottom = 347.0
scale = Vector2(2.5, 2.5)

[node name="SlotTexture" type="TextureRect" parent="Slots/Slot15"]
layout_mode = 2

[node name="Slot16" type="CenterContainer" parent="Slots"]
layout_mode = 0
offset_left = 665.0
offset_top = 331.0
offset_right = 681.0
offset_bottom = 347.0
scale = Vector2(2.5, 2.5)

[node name="SlotTexture" type="TextureRect" parent="Slots/Slot16"]
layout_mode = 2

[node name="Slot17" type="CenterContainer" parent="Slots"]
layout_mode = 0
offset_left = 718.0
offset_top = 331.0
offset_right = 734.0
offset_bottom = 347.0
scale = Vector2(2.5, 2.5)

[node name="SlotTexture" type="TextureRect" parent="Slots/Slot17"]
layout_mode = 2

[node name="Slot18" type="CenterContainer" parent="Slots"]
layout_mode = 0
offset_left = 772.0
offset_top = 331.0
offset_right = 788.0
offset_bottom = 347.0
scale = Vector2(2.5, 2.5)

[node name="SlotTexture" type="TextureRect" parent="Slots/Slot18"]
layout_mode = 2

[node name="Slot19" type="CenterContainer" parent="Slots"]
offset_left = 340.0
offset_top = 385.0
offset_right = 356.0
offset_bottom = 401.0
scale = Vector2(2.5, 2.5)

[node name="SlotTexture" type="TextureRect" parent="Slots/Slot19"]
layout_mode = 2

[node name="Slot20" type="CenterContainer" parent="Slots"]
offset_left = 394.0
offset_top = 385.0
offset_right = 410.0
offset_bottom = 401.0
scale = Vector2(2.5, 2.5)

[node name="SlotTexture" type="TextureRect" parent="Slots/Slot20"]
layout_mode = 2

[node name="Slot21" type="CenterContainer" parent="Slots"]
offset_left = 448.0
offset_top = 385.0
offset_right = 464.0
offset_bottom = 401.0
scale = Vector2(2.5, 2.5)

[node name="SlotTexture" type="TextureRect" parent="Slots/Slot21"]
layout_mode = 2

[node name="Slot22" type="CenterContainer" parent="Slots"]
offset_left = 502.0
offset_top = 385.0
offset_right = 518.0
offset_bottom = 401.0
scale = Vector2(2.5, 2.5)

[node name="SlotTexture" type="TextureRect" parent="Slots/Slot22"]
layout_mode = 2

[node name="Slot23" type="CenterContainer" parent="Slots"]
offset_left = 556.0
offset_top = 385.0
offset_right = 572.0
offset_bottom = 401.0
scale = Vector2(2.5, 2.5)

[node name="SlotTexture" type="TextureRect" parent="Slots/Slot23"]
layout_mode = 2

[node name="Slot24" type="CenterContainer" parent="Slots"]
offset_left = 610.0
offset_top = 385.0
offset_right = 626.0
offset_bottom = 401.0
scale = Vector2(2.5, 2.5)

[node name="SlotTexture" type="TextureRect" parent="Slots/Slot24"]
layout_mode = 2

[node name="Slot25" type="CenterContainer" parent="Slots"]
offset_left = 664.0
offset_top = 385.0
offset_right = 680.0
offset_bottom = 401.0
scale = Vector2(2.5, 2.5)

[node name="SlotTexture" type="TextureRect" parent="Slots/Slot25"]
layout_mode = 2

[node name="Slot26" type="CenterContainer" parent="Slots"]
offset_left = 718.0
offset_top = 385.0
offset_right = 734.0
offset_bottom = 401.0
scale = Vector2(2.5, 2.5)

[node name="SlotTexture" type="TextureRect" parent="Slots/Slot26"]
layout_mode = 2

[node name="Slot27" type="CenterContainer" parent="Slots"]
offset_left = 772.0
offset_top = 385.0
offset_right = 788.0
offset_bottom = 401.0
scale = Vector2(2.5, 2.5)

[node name="SlotTexture" type="TextureRect" parent="Slots/Slot27"]
layout_mode = 2

[node name="Slot28" type="CenterContainer" parent="Slots"]
offset_left = 340.0
offset_top = 439.0
offset_right = 356.0
offset_bottom = 455.0
scale = Vector2(2.5, 2.5)

[node name="SlotTexture" type="TextureRect" parent="Slots/Slot28"]
layout_mode = 2

[node name="Slot29" type="CenterContainer" parent="Slots"]
offset_left = 394.0
offset_top = 439.0
offset_right = 410.0
offset_bottom = 455.0
scale = Vector2(2.5, 2.5)

[node name="SlotTexture" type="TextureRect" parent="Slots/Slot29"]
layout_mode = 2

[node name="Slot30" type="CenterContainer" parent="Slots"]
offset_left = 448.0
offset_top = 439.0
offset_right = 464.0
offset_bottom = 455.0
scale = Vector2(2.5, 2.5)

[node name="SlotTexture" type="TextureRect" parent="Slots/Slot30"]
layout_mode = 2

[node name="Slot31" type="CenterContainer" parent="Slots"]
offset_left = 502.0
offset_top = 439.0
offset_right = 518.0
offset_bottom = 455.0
scale = Vector2(2.5, 2.5)

[node name="SlotTexture" type="TextureRect" parent="Slots/Slot31"]
layout_mode = 2

[node name="Slot32" type="CenterContainer" parent="Slots"]
offset_left = 556.0
offset_top = 439.0
offset_right = 572.0
offset_bottom = 455.0
scale = Vector2(2.5, 2.5)

[node name="SlotTexture" type="TextureRect" parent="Slots/Slot32"]
layout_mode = 2

[node name="Slot33" type="CenterContainer" parent="Slots"]
offset_left = 610.0
offset_top = 439.0
offset_right = 626.0
offset_bottom = 455.0
scale = Vector2(2.5, 2.5)

[node name="SlotTexture" type="TextureRect" parent="Slots/Slot33"]
layout_mode = 2

[node name="Slot34" type="CenterContainer" parent="Slots"]
offset_left = 664.0
offset_top = 439.0
offset_right = 680.0
offset_bottom = 455.0
scale = Vector2(2.5, 2.5)

[node name="SlotTexture" type="TextureRect" parent="Slots/Slot34"]
layout_mode = 2

[node name="Slot35" type="CenterContainer" parent="Slots"]
offset_left = 718.0
offset_top = 439.0
offset_right = 734.0
offset_bottom = 455.0
scale = Vector2(2.5, 2.5)

[node name="SlotTexture" type="TextureRect" parent="Slots/Slot35"]
layout_mode = 2

[node name="Slot36" type="CenterContainer" parent="Slots"]
offset_left = 772.0
offset_top = 439.0
offset_right = 788.0
offset_bottom = 455.0
scale = Vector2(2.5, 2.5)

[node name="SlotTexture" type="TextureRect" parent="Slots/Slot36"]
layout_mode = 2
